@@ -33,6 +33,7 @@ repositories {
 
 dependencies {
   //  implementation 'org.slf4j:slf4j-api:2.0.16'
+    implementation 'org.slf4j:slf4j-nop:1.7.36'
     implementation 'org.gradle:gradle-tooling-api:8.7'
     implementation 'com.google.code.gson:gson:2.13.1'
     implementation 'com.github.siom79.japicmp:japicmp:0.23.1'
@@ -166,12 +167,24 @@ graalvmNative {
         main {
             imageName = 'scout'
             mainClass = 'com.davidparry.scout.Main'
-            buildArgs.add('--no-fallback')  // Optional: reduces size, disables JVM fallback
-            buildArgs.add('--initialize-at-build-time=com.google.gson,com.davidparry.scout')
+            buildArgs.add('--no-fallback')
+            buildArgs.add('--initialize-at-build-time=com.google.gson,com.davidparry.scout,com.davidparry.scout.annotation,com.davidparry.scout.common,com.davidparry.scout.tools,com.davidparry.scout.handlers,com.davidparry.scout.io')
+            buildArgs.add("--enable-preview")
+            buildArgs.add("-H:+ReportExceptionStackTraces")
             buildArgs.add("-H:ReflectionConfigurationFiles=${projectDir}/src/main/resources/META-INF/native-image/reflect-config.json")
             buildArgs.add("-H:ResourceConfigurationFiles=${projectDir}/src/main/resources/META-INF/native-image/resource-config.json")
             buildArgs.add('--report-unsupported-elements-at-runtime')
             useFatJar = true  // Uses shadowJar
+        }
+    }
+    agent {
+        enabled = true
+        defaultMode = "standard" // or "conditional" for conditional metadata
+
+        // Optional: Configure metadata copy task
+        metadataCopy {
+            inputTaskNames.add("run") // or "test"
+            outputDirectories.add("src/main/resources/META-INF/native-image")
         }
     }
 }
@@ -203,19 +216,6 @@ tasks.named('nativeCompileClasspathJar') {
 
 tasks.named('generateResourcesConfigFile') {
     dependsOn tasks.named('shadowJar')
-}
-
-graalvmNative {
-    agent {
-        enabled = true
-        defaultMode = "standard" // or "conditional" for conditional metadata
-
-        // Optional: Configure metadata copy task
-        metadataCopy {
-            inputTaskNames.add("run") // or "test"
-            outputDirectories.add("src/main/resources/META-INF/native-image")
-        }
-    }
 }
 
 
